@@ -1273,6 +1273,7 @@ void account_page_cleaned(struct page *page, struct address_space *mapping,
 			  struct mem_cgroup *memcg, struct bdi_writeback *wb);
 int set_page_dirty(struct page *page);
 int set_page_dirty_lock(struct page *page);
+int set_page_dirty_notag(struct page *page);
 void cancel_dirty_page(struct page *page);
 int clear_page_dirty_for_io(struct page *page);
 
